fixes too close buttons

--- a/_sass/musicapp.sass
+++ b/_sass/musicapp.sass
@@ -22,8 +22,8 @@
   background-color: $accent_col_rgb
   // box-shadow: 0px 0px 5px 3px #ccc
   border-radius: 8px
-  padding: 10px 20px
-  margin-bottom: 20px
+  padding: 8px 18px
+  margin: 0px 5px 20px 5px
   font: $p_base
   font-weight: 400
   letter-spacing: 0.1em
